--- a/BlazorCRUD.Client/wwwroot/index.html
+++ b/BlazorCRUD.Client/wwwroot/index.html
@@ -13,7 +13,7 @@
     <link href="content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
     <script src="_content/Blazored.Modal/blazored.modal.js"></script>
 
-    <link href="_content/LiquidTechnologies.Blazor.ModalDialog/liquid-modal-dialog.css" rel="stylesheet" />
+    <link href="css/liquid-modal-dialog.css" rel="stylesheet" />
     <script src="_content/LiquidTechnologies.Blazor.ModalDialog/liquid-modal-dialog.js"></script>
 </head>
 
